@@ -1,3 +1,7 @@
+* Tue Jun 22 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.4.0
+- Override systemd unit file for tpm2-abrmd for TCTI compatibility
+- Fixed docs for puppet-strings
+
 * Thu Jun 17 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.4.0
 - Removed support for Puppet 5
 - Ensured support for Puppet 7 in requirements and stdlib
